# deepracer-genesis

./: .gitignore  .jupyter_ystore.db  EXPERIMENT_PLAN.md  PLAN.md  README.md  TUTORIAL.md  mkdocs.yml  pyproject.toml
.jupyter/: collaboration_sessions.json
.virtual_documents/notebooks/: custom_algorithm_reinforce.ipynb  deepracer_genesis_colab.ipynb  deepracer_genesis_colab_output.ipynb  hpo_cnn.ipynb  track_designer.ipynb
__nyx_cache__/4ygaj5gi1e4jfhjq/: nyx_scene.json
__nyx_cache__/eryktfi4c2fhv8jq/: nyx_scene.json
__nyx_cache__/g89vwha4gvjg1tnj/: nyx_scene.json
__nyx_cache__/qmhzqzozz6bz2n9g/: nyx_scene.json
__nyx_cache__/wr7tutzb9wz5zyz3/: nyx_scene.json
benchmarks/: results.csv  results.md  results_t4.csv  throughput.py
deepracer_genesis/: eval.py  train.py
deepracer_genesis/agents/: __init__.py  scripted.py
deepracer_genesis/algorithms/: __init__.py  lagrangian.py  ppo.py  ppo_lagrangian.py  protocol.py  rsl_rl.py
deepracer_genesis/configs/: cfgs.py
deepracer_genesis/datasets/: __init__.py  rollout.py  splits.py  sweep.py
deepracer_genesis/deploy/: __init__.py  onnx.py
deepracer_genesis/envs/: deepracer_env.py  entities.py  features.py  rewards.py  scene.py  torchrl_env.py  track.py
deepracer_genesis/experiment/: __init__.py  __main__.py  ablation.py  agents.py  algorithms.py  builder.py  data_collection.py  evaluator.py  export.py  registry.py  report.py  run.py  spec.py  stages.py  trainer.py  transforms.py  visualize.py
deepracer_genesis/randomization/: appearance.py  domain_rand.py
deepracer_genesis/tools/: __init__.py  track_builder.py  track_split.py
deepracer_genesis/validation/: camera_check.py
docs/: index.md  tutorial.md
docs/api/: agents.md  algorithms.md  datasets.md  deploy.md  envs.md  experiment.md  tools.md
docs/concepts/: domain-randomization.md  experiments.md  (+3 more)
experiments/: __init__.py  camera.py  feature.py  hpo_optuna.py  safe.py  template.py
notebooks/: custom_algorithm_reinforce.ipynb  deepracer_genesis_colab.ipynb  deepracer_genesis_colab_output.ipynb  hpo_cnn.ipynb  track_designer.ipynb
runs/: report.csv  report.md
scripts/: collect_sim2real.py  fix_madrona_cuda13.sh  nyx_demo.py
tests/: test_ablation.py  test_evaluator.py  test_experiment_spec.py  test_ppo_lagrangian.py  test_report.py  test_transforms.py
(+50 files in other folders)
