[project]
name = "deepracer-genesis"
version = "0.1.1"
description = "AWS DeepRacer RL environment ported to Genesis (ROS-free, GPU-batched, vision-based, RSL-RL)"
requires-python = ">=3.10,<3.13"
dependencies = [
    "genesis-world>=1.2.0",
    "rsl-rl-lib>=5.4.0",
    "torch>=2.5",
    "tensordict>=0.7",
    "tensorboard",
    "pillow",
    "numpy",
    "imageio[ffmpeg]",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["deepracer_genesis*"]

[tool.setuptools.package-data]
deepracer_genesis = ["assets/**/*"]
